[tool.poetry]
name = "squids"
version = "0.1.0a1"
description = ""
authors = ["Ryan Siemens <ryanjsiemens@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.45"

[tool.poetry.dev-dependencies]
localstack = "^0.14.2"
black = "^22.3.0"
isort = "^5.10.1"
Sphinx = "^4.5.0"
sphinx-autodoc-typehints = "^1.18.1"
furo = "^2022.4.7"
mypy = "^0.950"
boto3-stubs = {extras = ["essential"], version = "^1.22.3"}
awscli-local = "^0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
